Fixed the getAllCustomers caching